# my-alloc

./: CMakeLists.txt  README.md
src/: alloc_.c  main.c
